# tremendous-container-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements.yml
src/: .clang-format
src/example1/: Dockerfile  pyproject.toml  requirements.txt
src/example1/src/tremendous_app/: main_app.py
src/example1/src/tremendous_app/static/css/: style.css
src/example1/src/tremendous_app/templates/: base.html  index.html  memes.html
src/example1/src/tremendous_app/utils/: __helpers.py  __init__.py
src/example2/: Dockerfile
src/example2/src/rust_word_counter/: Cargo.toml  main.rs
src/example2/text_files/: jfk.txt  malala.txt  teddy.txt
src/example3/: Dockerfile
src/example3/src/cpp_word_counter/: main.cpp
src/example3/text_files/: ewiesel.txt  gw.txt  reagan.txt
src/tremendous_app/: main_app.py
src/tremendous_app/templates/: base.html  index.html  memes.html
