[project]
name = "tremendous-container-demo"
version = "0.0.1"
dependencies = ["flask", "click", "numpy"]
requires-python = ">=3.8"
authors = [{name="xenomorphWarrior97", email="xenomorphWarrior97@me.com"}]
description = "Sample app demonstrating running a python app in a container!"
license = "GPL-3.0-or-later"

[project.scripts]
tremendous-app = "tremendous_app.main_app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tremendous_app"]
include-package-data=true

[tool.setuptools.package-data]
tremendous_app = ["static/**/*", "templates/**/*"]

